1.30.1: additional `--add-open` args in MpsMigrate