@@ -2,6 +2,12 @@
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 1.30.1
+
+### Fixed
+
+- `MpsMigrate`: pass two additional `--add-opens` arguments to MPS to support version 2025.2 and above.
+
 ## 1.30.0
 
 ### Changed
